# jx3-clip

./: .gitignore  LICENSE  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: release.yaml
src/: app.css  app.tsx  router.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/command/: config_cmd.rs  frame_config_cmd.rs  mod.rs  project_cmd.rs
src-tauri/src/database/: clip_config.rs  connect.rs  frame_config.rs  mod.rs
src-tauri/src/database/initialize/: clip_config.rs  frame_config.rs  mod.rs
src-tauri/src/gpu_concat/: mod.rs  object.rs  shader.wgsl  state.rs  texture.rs
src-tauri/src/menu/: configuration.rs  menu_keys.rs  mod.rs  project.rs
src-tauri/src/server/: mod.rs  project.rs  project_config.rs
src-tauri/src/tools/: datetime.rs  file_opts.rs  image_tools.rs  mod.rs
src/backend/: index.ts  menu.message.ts  message.ts  model.ts
src/backend/apis/: clip_config.ts  frame_config.ts  index.ts  project_apis.ts
src/components/: context-menu.tsx  divider-h.tsx  form-item.tsx  global-message.tsx  global-modal.tsx  global-notice.tsx  open-project.tsx  page-container.tsx  redirect.tsx  sub-title.tsx
src/data/: body-type.ts  part.ts
src/pages/configuration/clip/: draw-image.tsx  index.tsx  settings.tsx  upload-btn.tsx
src/store/: clip-config.store.ts  drag.store.ts  frame-config.store.ts  message.store.ts  modal.store.ts  project.store.ts
src/utils/: clip.ts  draw-2d.ts  fileopt.ts  math-helper.ts
(+32 files in other folders)
