[package]
name = "jx3-clip"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
sqlite = "0.30.1"
log = "0.4.17"
env_logger = "0.10.0"
image = "0.24.5"
sha2 = "0.10.6"
threadpool = "1.8.1"
toml = "0.5.9"
zip_archive = "1.2.2"
zip = "0.6.3"
futures-intrusive = "0.5.0"
wgpu = "0.14.2"
pollster = "0.2.5"
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
